Adding solution for Scenario 9