@@ -121,6 +121,15 @@
           <release>${java.version}</release>
         </configuration>
       </plugin>
+
+      <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.5.2</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
